--- a/mini-project-stream-app/requirements.txt
+++ b/mini-project-stream-app/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.4.1
+antlr4-python3-runtime==4.9.3
 attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
@@ -13,8 +14,10 @@ fonttools==4.53.1
 fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
+hydra-core==1.3.2
 idna==3.8
 imageio==2.35.1
+imutils==0.5.4
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -29,6 +32,7 @@ narwhals==1.6.0
 networkx==3.3
 ninja==1.11.1.1
 numpy==1.26.4
+omegaconf==2.3.0
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 packaging==24.1
