--- a/mini-project-stream-app/requirements.txt
+++ b/mini-project-stream-app/requirements.txt
@@ -1,14 +1,20 @@
 altair==5.4.1
 antlr4-python3-runtime==4.9.3
+appnope==0.1.4
+asttokens==2.4.1
 attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
 easyocr==1.7.1
+executing==2.1.0
 filelock==3.15.4
 fonttools==4.53.1
 fsspec==2024.6.1
@@ -18,17 +24,24 @@ hydra-core==1.3.2
 idna==3.8
 imageio==2.35.1
 imutils==0.5.4
+ipykernel==6.29.5
+ipython==8.27.0
+jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 lazy_loader==0.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 narwhals==1.6.0
+nest-asyncio==1.6.0
 networkx==3.3
 ninja==1.11.1.1
 numpy==1.26.4
@@ -37,9 +50,15 @@ opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
 protobuf==5.28.0
 psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
 pyarrow==17.0.0
 pyclipper==1.3.0.post5
@@ -50,6 +69,7 @@ python-bidi==0.6.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
+pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
 rich==13.8.0
@@ -61,6 +81,7 @@ setuptools==74.0.0
 shapely==2.0.6
 six==1.16.0
 smmap==5.0.1
+stack-data==0.6.3
 streamlit==1.38.0
 sympy==1.13.2
 tenacity==8.5.0
@@ -70,8 +91,10 @@ torch==2.4.0
 torchvision==0.19.0
 tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
 ultralytics==8.2.84
 ultralytics-thop==2.0.5
 urllib3==2.2.2
+wcwidth==0.2.13
